# cursorx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  config.yaml  coverage.xml  cursor_agent_docs.txt  cursor_cli_docs.txt  cursor_docs_full.txt  fix_backticks.py  main.py  main_mp.py  main_with_knowledge.py  mcp.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-optional.txt  requirements-test-ml.in  requirements-test-ml.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  run.py
.cursor/: cli.json  hooks.json
.cursor/agents/: planner.md  reviewer.md  worker.md
.cursor/hooks/: afterFileEdit.sh  audit.sh  beforeCommand.sh  pre_commit.sh
.cursor/rules/: dev-standards.mdc  general.mdc  iteration-assistant.mdc  planner.mdc  reviewer.mdc  worker.mdc
.cursor/skills/code-review/: SKILL.md
.cursor/skills/knowledge-base/: SKILL.md
.cursor/skills/task-planning/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cursor-code-review.yml  cursor-fix-ci.yml  import-test.yml  lint.yml  notify-failure.yml  pr-check.yml  reusable-python-setup.yml  security.yml
agents/: __init__.py  committer.py  planner.py  planner_process.py  reviewer.py  reviewer_process.py  worker.py  worker_process.py
coordinator/: __init__.py  orchestrator.py  orchestrator_mp.py  worker_pool.py
core/: __init__.py  base.py  check_all_contract.py  cloud_utils.py  config.py  contract_fields.py  execution_policy.py  knowledge.py  message.py  output_contract.py  platform.py  project_workspace.py  state.py
cursor/: __init__.py  client.py  cloud_client.py  executor.py  mcp.py  network.py  streaming.py
cursor/cloud/: __init__.py  auth.py  client.py  exceptions.py  retry.py  task.py
docs/: DEPENDENCY_MANAGEMENT.md  DEVELOPMENT.md  E2E_TESTING_GUIDE.md  KNOWLEDGE_BASE_GUIDE.txt  LESSONS_LEARNED.md  PACKAGE_MANAGER_COMPARISON.md
indexing/: __init__.py  base.py  chunker.py  cli.py  config.py  embedding.py  indexer.py  search.py  vector_store.py
knowledge/: __init__.py  doc_sources.py  doc_url_strategy.py  fetcher.py  manager.py  models.py  parser.py  semantic_search.py  storage.py  vector.py  vector_adapter.py  vector_store.py
logs/stream_json/raw/: planner_planner-76b44963_20260118_215419_906471.jsonl  planner_planner-ab8eec8f_20260118_215626_228899.jsonl  planner_planner-ab8eec8f_20260118_215626_243855.jsonl  planner_planner-ab8eec8f_20260118_221430_097428.jsonl  planner_planner-ab8eec8f_20260118_222130_866445.jsonl  reviewer_reviewer-6557fccd_20260118_221327_251370.jsonl  reviewer_reviewer-6557fccd_20260118_222011_202704.jsonl  reviewer_reviewer-6557fccd_20260118_222820_737451.jsonl  worker_worker-cd481226_20260118_215757_927738.jsonl  worker_worker-cd481226_20260118_215757_941400.jsonl  worker_worker-cd481226_20260118_215757_945342.jsonl  worker_worker-cd481226_20260118_215858_830273.jsonl  worker_worker-cd481226_20260118_215958_551722.jsonl  worker_worker-cd481226_20260118_220024_810029.jsonl  worker_worker-cd481226_20260118_220117_853264.jsonl  worker_worker-cd481226_20260118_220126_550617.jsonl  worker_worker-cd481226_20260118_220213_268266.jsonl  worker_worker-cd481226_20260118_220219_954613.jsonl  worker_worker-cd481226_20260118_220242_442863.jsonl  worker_worker-cd481226_20260118_220311_811694.jsonl  worker_worker-cd481226_20260118_220332_491178.jsonl  worker_worker-cd481226_20260118_220450_356428.jsonl  worker_worker-cd481226_20260118_220506_626952.jsonl  worker_worker-cd481226_20260118_220529_466535.jsonl  worker_worker-cd481226_20260118_220645_261479.jsonl  worker_worker-cd481226_20260118_220803_477589.jsonl  worker_worker-cd481226_20260118_220818_038630.jsonl  worker_worker-cd481226_20260118_220843_376419.jsonl  worker_worker-cd481226_20260118_220910_854085.jsonl  worker_worker-cd481226_20260118_220921_574534.jsonl  worker_worker-cd481226_20260118_221047_761176.jsonl  worker_worker-cd481226_20260118_221105_237159.jsonl  worker_worker-cd481226_20260118_221109_959868.jsonl  worker_worker-cd481226_20260118_221142_794520.jsonl  worker_worker-cd481226_20260118_221627_181798.jsonl  worker_worker-cd481226_20260118_221627_191021.jsonl  (+8 more)
process/: __init__.py  manager.py  message_queue.py  worker.py
scripts/: _verify_models.py  analyze_codebase.sh  analyze_image.sh  batch_process_images.sh  batch_refactor.sh  browse_web.sh  check_all.sh  check_deps.py  code_review.sh  fetch_webpage.sh  implement_task.sh  knowledge_base.sh  knowledge_cli.py  list_models.sh  manage_index.sh  pre_commit_check.py  render_check_all_summary.py  run_agent_system.sh  run_basic.py  run_e2e_tests.sh  run_iterate.py  run_knowledge.py  run_mp.py  self_iterate.py  stream_progress.sh  sync-deps.sh  sync_cursor_docs.py  test_cloud_import.py  test_cursor_knowledge.py  test_knowledge_interactive.py  test_streaming_e2e.py  validate_knowledge.sh  verify_cloud_path.py  verify_no_key_iterate.sh
tasks/: __init__.py  queue.py  task.py
tests/: _test_plan_ask.py  conftest.py  conftest_e2e.py  mock_agent_cli.py  test_agent_behavior.py  test_agent_init.py  test_check_all_json_contract.py  test_ci_summary_renderer.py  test_cloud_client.py  test_cloud_integration.py  test_committer.py  test_config_loading.py  test_core.py  test_cursor_client.py  test_doc_url_strategy.py  test_e2e_agent_collaboration.py  test_e2e_basic.py  test_e2e_error_handling.py  test_e2e_execution_modes.py  test_e2e_imports.py  test_e2e_knowledge_integration.py  test_e2e_run_modes.py  test_e2e_streaming.py  test_e2e_workflow.py  test_execution_policy.py  test_imports.py  test_iterate_execution_matrix_consistency.py  test_knowledge.py  test_knowledge_injection.py  test_knowledge_validation.py  test_knowledge_vector.py  test_mcp.py  test_mp_stability.py  test_network.py  test_network_blocking.py  test_no_api_key_network_isolation.py  test_orchestrator.py  test_orchestrator_mp_commit.py  test_output_contract.py  test_platform_compat.py  (+10 more)
tests/test_indexing/: __init__.py  test_chunker.py  test_config.py  test_embedding.py  test_search.py  test_vector_store.py
