# ============================================================
# 构建系统配置
# 支持 pip install 和 Poetry 双重安装方式
# ============================================================
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================
# PEP 621 项目元数据 (标准格式，pip 兼容)
# ============================================================
[project]
name = "cursorx"
version = "0.1.0"
description = "规划者-执行者模式的多 Agent 系统"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "CursorX Team"}
]
keywords = ["agent", "ai", "cursor", "multi-agent", "planner", "worker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ============================================================
# 核心依赖 (core) - 运行时必需
# ============================================================
dependencies = [
    # 异步支持
    "asyncio-pool>=0.6.0",
    "aiofiles>=23.2.1",
    # 数据模型与验证
    "pydantic>=2.5.0",
    # 进程管理
    "psutil>=5.9.0",
    # 日志
    "loguru>=0.7.2",
    # 配置管理
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    # 类型支持
    "typing-extensions>=4.9.0",
]

# ============================================================
# 可选依赖分组
# 使用方式: pip install cursorx[ml] 或 pip install -e ".[ml,web]"
# ============================================================
[project.optional-dependencies]
# 网页处理依赖 - 知识库抓取、网页解析
web = [
    "beautifulsoup4>=4.12.0",        # HTML 解析
    "html2text>=2024.1.0",           # HTML 转 Markdown
    "lxml>=5.0.0",                   # 高性能 XML/HTML 解析器
    "httpx>=0.27.0",                 # 异步 HTTP 客户端
    "websockets>=12.0",              # WebSocket 实时连接支持
]
# ML/向量搜索依赖 - 语义搜索、知识库功能
ml = [
    "sentence-transformers>=2.2.0",  # 文本嵌入向量生成
    "chromadb>=0.4.0",               # 向量数据库
    "tiktoken>=0.5.0",               # OpenAI 分词器
    "hnswlib>=0.7.0",                # 轻量级向量索引
]
# 向量依赖别名 (向后兼容)
vector = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.5.0",
    "hnswlib>=0.7.0",
]
# 开发工具 - 代码质量、类型检查、安全扫描
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "flake8>=6.0.0",
    "pre-commit>=3.5.0",
    "pip-audit>=2.6.0",              # 依赖安全漏洞扫描
]
# 测试工具 - 单元测试、集成测试
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",             # 代码覆盖率
    "respx>=0.20.0",                 # HTTP mock
]
# 完整安装 (所有可选依赖)
all = [
    "cursorx[web,ml,dev,test]",
]

[project.urls]
Homepage = "https://github.com/cursorx/cursorx"
Repository = "https://github.com/cursorx/cursorx.git"

# ============================================================
# Poetry 配置 (支持 poetry install 安装方式)
# ============================================================
[tool.poetry]
name = "cursorx"
version = "0.1.0"
description = "规划者-执行者模式的多 Agent 系统"
authors = ["CursorX Team"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "core" },
    { include = "agents" },
    { include = "coordinator" },
    { include = "cursor" },
    { include = "tasks" },
    { include = "indexing" },
    { include = "knowledge" },
    { include = "process" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
# 核心依赖
asyncio-pool = ">=0.6.0"
aiofiles = ">=23.2.1"
pydantic = ">=2.5.0"
psutil = ">=5.9.0"
loguru = ">=0.7.2"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0.1"
typing-extensions = ">=4.9.0"
# Web/网页处理依赖 (可选)
beautifulsoup4 = { version = ">=4.12.0", optional = true }
html2text = { version = ">=2024.1.0", optional = true }
lxml = { version = ">=5.0.0", optional = true }
httpx = { version = ">=0.27.0", optional = true }
websockets = { version = ">=12.0", optional = true }
# ML/向量依赖 (可选)
sentence-transformers = { version = ">=2.2.0", optional = true }
chromadb = { version = ">=0.4.0", optional = true }
tiktoken = { version = ">=0.5.0", optional = true }
hnswlib = { version = ">=0.7.0", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0.0"
ruff = ">=0.1.0"
flake8 = ">=6.0.0"
pre-commit = ">=3.5.0"
pip-audit = ">=2.6.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
respx = ">=0.20.0"

[tool.poetry.extras]
web = ["beautifulsoup4", "html2text", "lxml", "httpx", "websockets"]
ml = ["sentence-transformers", "chromadb", "tiktoken", "hnswlib"]
vector = ["sentence-transformers", "chromadb", "tiktoken", "hnswlib"]

# ============================================================
# pytest 配置
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# 默认超时时间 (秒)
timeout = 60
# 测试标记定义
markers = [
    "e2e: 端到端测试，测试完整的用户场景和工作流 (deselect with '-m \"not e2e\"')",
    "slow: 运行时间较长的测试，超过 30 秒 (deselect with '-m \"not slow\"')",
    "integration: 集成测试，需要外部服务或资源 (deselect with '-m \"not integration\"')",
    "unit: 单元测试，快速独立的测试 (select with '-m unit')",
    "cloud: 需要云服务 API 的测试 (deselect with '-m \"not cloud\"')",
    "network: 需要网络连接的测试 (deselect with '-m \"not network\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# 覆盖率配置 (pytest-cov)
# ============================================================
[tool.coverage.run]
# 覆盖率检查目标
source = ["run", "core", "agents", "coordinator", "cursor", "tasks", "knowledge", "indexing", "process"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
# 最低覆盖率阈值 80%
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================
# mypy 配置
# ============================================================
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = [
    "venv",
    "__pycache__",
    ".git",
    "logs",
]

# ============================================================
# ruff 配置
# ============================================================
[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "logs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (由 line-length 控制)
    "B008",   # function call in default argument
    "B905",   # zip without strict
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "B"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["core", "agents", "coordinator", "tasks", "cursor", "indexing", "knowledge", "process"]

# ============================================================
# flake8 配置 (与 check_all.sh 一致)
# 注意: flake8 不原生支持 pyproject.toml，需要 Flake8-pyproject 插件
# 或使用 .flake8 / setup.cfg 文件
# ============================================================
[tool.flake8]
max-line-length = 120
max-complexity = 10
# 严重错误检查 (--select=E9,F63,F7,F82)
select = ["E9", "F63", "F7", "F82"]
extend-ignore = ["E501"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "logs",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:B,ARG",
]
